<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:weightSum="100"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15">
        <TextSwitcher
            android:id="@+id/home_title_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/default_network_size"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="60">
        <View
            android:id="@+id/circle_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/circle"
            android:layout_gravity="center_horizontal"/>
        <com.pascalwelsch.holocircularprogressbar.HoloCircularProgressBar
            android:id="@+id/circle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="100">
            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="50"/>
            <TextView
                android:id="@+id/vpn_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/nearest_network_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black" />
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/get_directions_button_label"
                android:id="@+id/nearest_network_directions_button"
                bootstrapbutton:bb_type="success"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_icon_right="fa-location-arrow"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20">
            <TextView
                android:id="@+id/access_type"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/access_label"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="horizontal"
            android:weightSum="100">
            <com.beardedhen.androidbootstrap.FontAwesomeText
                android:id="@+id/thanks_received_image"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                fontawesometext:fa_icon="fa-heart"
                android:textColor="@color/list_background_pressed"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:textSize="45sp"
            />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="25"
                android:weightSum="100">
                <TextView
                    android:id="@+id/thanks_received_text"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="60"
                    android:textSize="36sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/thanks_received_label"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/thanks_received_points_label"/>
            </LinearLayout>
            <com.beardedhen.androidbootstrap.FontAwesomeText
                android:id="@+id/connections_made_image"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                fontawesometext:fa_icon="fa-wifi"
                android:textColor="@color/wifi_blue"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:textSize="45sp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="25"
                android:weightSum="100">
                <TextView
                    android:id="@+id/connections_made_text"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="60"
                    android:textSize="36sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/connections_made_label"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/connections_made_label"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>